# vilnyypay_bot

./: .env.example  .gitignore  .profile  Makefile  Procfile  README.md  __init__.py  main.py  models.py  pyproject.toml  requirements.txt  settings.py  states.py  tasks.py  worker.py
filters/: auth.py
locales/uk/LC_MESSAGES/: messages.po
middlewares/: message_logging_middleware.py
migrations/bot/: 0_20220902000739_init.sql  10_20221104121920_make_first_name_nullable_in_Profile.sql  11_20221106130116_add_name_and_edrpou_to_MonobankAccounts.sql  12_20230206164957_rename_GroupPayment_creator_to_created_by.sql  1_20220902002544_add_telegram_models.sql  2_20220902003053_add_a_profile_model.sql  3_20220902123512_add_a_group_model.sql  4_20220904132046_use_underscores_in_table_names_and_double_underscores_in_m2m_tables.sql  5_20220904133551_add_monobank_and_payments_models.sql  6_20221013193301_add_groups_admins.sql  7_20221030165311_add_group_payments.sql  8_20221030173216_Users_use_Settings_to_pay_to_specific_MonobankAccounts.sql  9_20221101204303_add_last_name_for_Profiles.sql
utils/: i18n.py  monobank.py  redis_storage.py  tortoise_orm.py
