[tool.poetry]
name = "vilnyypay_bot"
version = "0.1.0"
description = "A bot for managing payments for a network of Vilnyy co-livings."
authors = ["Mykola Solodukha <mykola.soloduha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.22.1"
emoji = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
